feat: consolidar ajustes completos do painel e api